# wraptile/src/wraptile/routes.py
@@ -1,6 +1,6 @@
 # generated by gen_server.py:
 #   filename:  routes.py:
-#   timestamp: 2026-05-27T07:55:14.099104
+#   timestamp: 2026-07-31T14:05:53.544409
 
 import fastapi
 
@@ -169,3 +169,20 @@ async def get_job_results(
     return await service.get_job_results(
         job_id=jobId, request=request, response=response
     )
+
+
+# noinspection PyPep8Naming
+@app.post(
+    "/jobs/{jobId}/restart",
+    status_code=201,
+    response_model=JobInfo,
+    response_model_exclude_none=True,
+    response_model_exclude_unset=True,
+)
+async def restart_job(
+    jobId: str,
+    request: fastapi.Request,
+    response: fastapi.Response,
+    service: Service = fastapi.Depends(get_service),  # noqa B008
+):
+    return await service.restart_job(job_id=jobId, request=request, response=response)
